<resources>
    <string name="app_name">GST India</string>
    <string name="api_key_fabric">d8de04147a6bbc030add5baf0a387d418859b476</string>
    <string name="_0">0%</string>
    <string name="_5">5%</string>
    <string name="_12">12%</string>
    <string name="_18">18%</string>
    <string name="_28">28%</string>
    <string name="lbl_item_name">Item Name</string>
    <string name="lbl_gst_perc">GST %</string>
    <string name="lbl_pre_gst_perc">Before GST %</string>
    <string-array name="array_cheaper_costlier">
        <item>Cheaper</item>
        <item>Costlier</item>
        <item>Unchanged</item>
    </string-array>
    <string-array name="_0_products_name">
        <item>Jute</item>
        <item>Fresh Meat</item>
        <item>Fish</item>
        <item>Chicken</item>
        <item>Eggs</item>
        <item>Milk</item>
        <item>Butter Milk</item>
        <item>Curd</item>
        <item>Natural Honey</item>
        <item>Fresh Fruits</item>
        <item>Vegetables</item>
        <item>Flour</item>
        <item>Besan</item>
        <item>Bread</item>
        <item>Prasad</item>
        <item>Salt</item>
        <item>Bindi</item>
        <item>Sindoor</item>
        <item>Stamps</item>
        <item>Judicial Papers</item>
        <item>Printed Books</item>
        <item>Newspapers</item>
        <item>Bangles</item>
        <item>Handloom</item>
        <item>Bone meal  hoof meal, horn meal</item>
        <item>Cereal grains hulled</item>
        <item>Palmyra jaggery</item>
        <item>Kajal</item>
        <item>Childrens picture, drawing or colouring books</item>
        <item>Human Hair</item>
        <item>Services-Hotels and lodges with rent below Rs 1,000</item>
        <item>Rough precious and semi-precious stones will attract GST rate of 0.25%</item>
    </string-array>
    <string-array name="_0_products_images">
        <item>jute.jpg</item>
        <item>freshmeat.jpg</item>
        <item>freshfish.jpg</item>
        <item>chicken.jpeg</item>
        <item>egg.jpg</item>
        <item>raw-milk.jpg</item>
        <item>buttermilk.png</item>
        <item>curd.jpg</item>
        <item>natural_honey.png</item>
        <item>freshfruits.jpg</item>
        <item>freshvegetables.jpg</item>
        <item>flour.jpg</item>
        <item>besan.jpg</item>
        <item>bread.jpg</item>
        <item>prasad.jpg</item>
        <item>salt.jpg</item>
        <item>bindi.jpg</item>
        <item>sindoor.jpg</item>
        <item>stamps.jpg</item>
        <item>judicial_papers.jpg</item>
        <item>printed-books.jpg</item>
        <item>news_paper.png</item>
        <item>bangle.jpg</item>
        <item>handloom.jpg</item>
        <item>beefbones.jpg</item>
        <item>Cereal grains hulled.jpg</item>
        <item>palmyra_jaggery.jpg</item>
        <item>kajal.jpg</item>
        <item>drawing.jpg</item>
        <item>Human-Hair.jpg</item>
        <item>hotel.png</item>
        <item>rough_semi_precious_stones.jpg</item>
    </string-array>
    <string-array name="_5_products_names">
        <item>Fish fillet</item>
        <item>Packaged food items</item>
        <item>Footwear below Rs 500</item>
        <item>Cream</item>
        <item>Skimmed milk powder</item>
        <item>Branded paneer</item>
        <item>Frozen vegetables</item>
        <item>Coffee</item>
        <item>Tea</item>
        <item>Spices</item>
        <item>Pizza bread</item>
        <item>Rusk</item>
        <item>Sabudana</item>
        <item>Kerosene</item>
        <item>Coal</item>
        <item>Medicines</item>
        <item>Stent</item>
        <item>Lifeboats</item>
        <item>Cashew nut</item>
        <item>Cashew nut in shell</item>
        <item>Raisin</item>
        <item>Bio gas</item>
        <item>Insulin</item>
        <item>Agarbatti</item>
        <item>Kites</item>
        <item>Postage or revenue stamps</item>
        <item>Stamp-post marks</item>
        <item>First-day covers</item>
        <item>Transport services (Railways, air transport)</item>
        <item>Small restraurants</item>

    </string-array>
    <string-array name="_5_products_images">
        <item>Fish-Fillet.jpeg</item>
        <item>packaged_food.jpg</item>
        <item>footwear.jpg</item>
        <item>cream.jpg</item>
        <item>skimmedmilkpowder.jpg</item>
        <item>brandedpaneer.jpg</item>
        <item>frozenvegetables.jpg</item>
        <item>coffee.jpg</item>
        <item>tea.jpg</item>
        <item>spices.jpg</item>
        <item>pizzabread.jpg</item>
        <item>rusk.jpg</item>
        <item>sabudana.jpg</item>
        <item>kerosene.jpg</item>
        <item>coal.jpg</item>
        <item>medicines.png</item>
        <item>stent.jpg</item>
        <item>lifeboats.jpg</item>
        <item>cashewnut.jpg</item>
        <item>cashewnutinshell.jpg</item>
        <item>raisin.jpg</item>
        <item>biogas.jpg</item>
        <item>insulin.jpg</item>
        <item>agarbatti.jpg</item>
        <item>kites.jpg</item>
        <item>postage_revenuestamps.jpg</item>
        <item>stamp_post_marks.jpg</item>
        <item>first_day_covers.jpg</item>
        <item>transport_services.jpg</item>
        <item>restraurant.png</item>

    </string-array>
    <string-array name="_12_products_names">
        <item>Frozen meat products</item>
        <item>Butter</item>
        <item>Cheese</item>
        <item>Ghee</item>
        <item>Dry fruits in packaged form</item>
        <item>Animal fat</item>
        <item>Sausage</item>
        <item>Fruit juices</item>
        <item>Namkeen</item>
        <item>Ayurvedic medicines</item>
        <item>Tooth powder</item>
        <item>Colouring books</item>
        <item>Picture books</item>
        <item>Umbrella</item>
        <item>Sewing machine</item>
        <item>Cellphones</item>
        <item>Ketchup and Sauces</item>
        <item>All diagnostic kits and reagents</item>
        <item>Exercise books and note books</item>
        <item>Spoons</item>
        <item>Forks</item>
        <item>Ladles</item>
        <item>Skimmers</item>
        <item>Cake servers</item>
        <item>Fish knives</item>
        <item>Tongs</item>
        <item>Spectacles</item>
        <item>Playing cards</item>
        <item>Chess board</item>
        <item>Carom board</item>
        <item>Board games,like ludo</item>
        <item>State-run lotteries</item>
        <item>Non-AC hotels</item>
        <item>Business class air ticket</item>
        <item>Fertilisers</item>
        <item>Work Contracts</item>
    </string-array>
    <string-array name="_12_products_images">
        <item>frozen_meal_products.jpg</item>
        <item>butter.jpeg</item>
        <item>cheese.jpg</item>
        <item>ghee.jpg</item>
        <item>dry_fruits_packaged_form.jpg</item>
        <item>animal_fat.png</item>
        <item>sausage.jpg</item>
        <item>fruitjuices.jpg</item>
        <item>namkeen.jpg</item>
        <item>ayurvedicmedicines.jpg</item>
        <item>tooth_powder.jpg</item>
        <item>colouring_books.jpg</item>
        <item>picture_books.png</item>
        <item>umbrella.jpg</item>
        <item>sewing_machine.jpg</item>
        <item>cellphones.jpg</item>
        <item>ketchup.jpg</item>
        <item>diagnostickitsandreagents.png</item>
        <item>exercisebooksnotebooks.jpg</item>
        <item>spoons.jpg</item>
        <item>forks.jpg</item>
        <item>ladles.jpg</item>
        <item>skimmers.jpg</item>
        <item>cake_servers.jpg</item>
        <item>fish_knives.jpg</item>
        <item>tongs.jpg</item>
        <item>spectacles.png</item>
        <item>playing_cards.jpg</item>
        <item>chess_board.jpg</item>
        <item>carom_board.jpg</item>
        <item>board_games.jpg</item>
        <item>lottery-pic.jpg</item>
        <item>non_ac_hotel.png</item>
        <item>business_class_air_ticket.jpg</item>
        <item>fertilisers.png</item>
        <item>work_contract.jpg</item>
    </string-array>
    <string-array name="_18_products_names">
        <item>Aluminum Foil</item>
        <item>Bamboo Furniture</item>
        <item>Biscuits</item>
        <item>Cameras</item>
        <item>CCTV</item>
        <item>Corn-Flakes</item>
        <item>Electrical Transformer</item>
        <item>Envelopes</item>
        <item>Footwear</item>
        <item>Hat</item>
        <item>Helmets</item>
        <item>Ice Cream</item>
        <item>Instant Food Mixes</item>
        <item>Jams</item>
        <item>Kajal Pencil Stick</item>
        <item>Mayonnaise</item>
        <item>Mineral Water</item>
        <item>Mixed Condiments</item>
        <item>Monitors</item>
        <item>Notebooks</item>
        <item>Optical Fiber</item>
        <item>Pasta</item>
        <item>Pastries and Cakes</item>
        <item>Preserved Vegetables</item>
        <item>Printed Circuits</item>
        <item>Printers [other than multifunction printers]</item>
        <item>Refined Sugar</item>
        <item>Salad Dressings</item>
        <item>Sauces</item>
        <item>Soups</item>
        <item>Speakers</item>
        <item>Steel Products</item>
        <item>Swimming and Padding Pool</item>
        <item>Tampons</item>
        <item>Tissues</item>
        <item>Weighing Machinery [other than electric or electronic weighing machinery]</item>
        <item>AC Hotel</item>
        <item>Branded Graments</item>
        <item>Financial Services</item>
        <item>Hotel Room Rs.2500 - Rs.7500</item>
        <item>Telecom Services</item>
    </string-array>
    <string-array name="_18_products_images">
        <item>Aluminum Foil.png</item>
        <item>bamboo furniture.png</item>
        <item>biscuits.png</item>
        <item>cameras.png</item>
        <item>cctv.jpg</item>
        <item>Corn-Flakes.jpg</item>
        <item>curry paste.png</item>
        <item>electrical transformer.png</item>
        <item>envelopes.png</item>
        <item>footwear.png</item>
        <item>headgear (cap).png</item>
        <item>helmets.png</item>
        <item>Ice Cream.png</item>
        <item>instant food mixes.png</item>
        <item>jams.png</item>
        <item>kajal pencil stick.png</item>
        <item>mayonnaise.png</item>
        <item>mineral water.png</item>
        <item>mixed condiments.jpg</item>
        <item>monitors.png</item>
        <item>notebooks.png</item>
        <item>optical fiber.png</item>
        <item>PASTA_.png</item>
        <item>pastries and cakes.png</item>
        <item>preserved vegetables.png</item>
        <item>printed_circuits.png</item>
        <item>Printers [other than multifunction printers].png</item>
        <item>refined sugar.png</item>
        <item>salad dressings.png</item>
        <item>sauces.png</item>
        <item>soups.png</item>
        <item>speakers.png</item>
        <item>steel products.png</item>
        <item>swimming and padding pool.jpg</item>
        <item>tampons.png</item>
        <item>tissues.png</item>
        <item>Weighing Machinery [other than electric or electronic weighing machinery].png</item>
        <item>ac hotel.png</item>
        <item>branded graments.png</item>
        <item>financialservices.jpg</item>
        <item>hotel room 2500 - 7500.png</item>
        <item>telecom services.png</item>
    </string-array>
</resources>