<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        >
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/button_zero"
               android:text="@string/_0"
               android:layout_weight="1"
               android:theme="@style/ZeroButton"
               />
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/button_five"
               android:layout_weight="1"
               android:text="@string/_5"
               android:theme="@style/FiveButton"

               />
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/button_twelve"
               android:text="@string/_12"
               android:layout_weight="1"
               android:theme="@style/TwelveButton"
               />
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/button_eighteen"
               android:text="@string/_18"
               android:layout_weight="1"
               android:theme="@style/EighteenButton"
               />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_twenty_eight"
                android:text="@string/_28"
                android:layout_weight="1"
                android:theme="@style/TwentyEightButton"
                />
    </LinearLayout>
<android.support.v7.widget.RecyclerView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/recycler_view_products"
    />

</LinearLayout>